syntax = "proto3";

package net.cydhra.acromantula.proto;

option java_multiple_files = true;

message CommandResponse {
  int32 taskId = 1;
  string taskStatus = 2;
}
