syntax = "proto3";

package net.cydhra.acromantula.proto;

import "common.proto";

option java_multiple_files = true;

service ViewService {
  rpc view (ViewCommand) returns (CommandResponse);

  rpc exportView (ExportViewCommand) returns (CommandResponse);
}

message ExportViewCommand {
  int32 fileId = 1;
  string filePath = 2;
  string targetPath = 3;
  string type = 4;
  bool recursive = 5;
  bool includeIncompatible = 6;
}

message ViewCommand {
  int32 fileId = 1;
  string filePath = 2;
  string type = 3;
}
